# idcard-cn

./: .gitmodules  Cargo.toml
.github/workflows/: build_test.yml  check.yml  ci.yml  release.yml  test.yml
idcard/: Cargo.toml  LICENSE
idcard-impl/: Cargo.toml
idcard-impl/src/: ethnicity.rs  gender.rs  id.rs  lib.rs
idcard/src/: birth.rs  date.rs  ethnic.rs  ethnicity.rs  id.rs  lib.rs  sex.rs  utils.rs
