[package]
name = "idcard-cn-impl"
version = "0.0.1"
authors = ["huangjj27 <huangjj.27@qq.com>"]
license = "LGPL-2.1-or-later"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
idcard-cn = "0.0.2"
gb2260 = "0.1.2"
chrono = "0.4.19"
