[package]
name = "idcard-cn"
version = "0.0.1"
authors = ["huangjj27 <huangjj.27@qq.com>"]
edition = "2018"
repository = "https://github.com/huangjj27/idcard-rs"
license = "MIT OR Apache-2.0"
description = "根据《中华人民共和国居民身份证法》提供身份证上信息读取的接口特质"
keywords = ["idcard", "China"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gb2260 = "0.1"
chrono = "0.4"
